<resources>
    <string name="aseguradora">Insurer</string>
    <string name="empleado">Employee</string>
    <string name="service">Service</string>
    <string name="app_name">La Morena </string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Aylin Natalia Reyes Vargas</string>
    <string name="nav_header_subtitle">Ingenieria de sistemas ufps </string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="registerService">Register service</string>
    <string name="registerVehicle">Register vehicle</string>
    <string name="listIngresos">list Ingresos</string>
    <string name="Description">Empleado</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="lastname">LastName</string>
    <string name="rol">Cargo</string>
    <string name="email">Email</string>
    <string name="validateEmail">Please enter valid email address</string>
    <string name="password">Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="validatePassword">Please enter valid password</string>
    <string name="validateSamePasswords">Passwords do not match</string>
    <string name="validateField">Please complete the field</string>
    <string name="login">Login</string>
    <string name="noAccountYet">No account yet? Create one</string>
    <string name="accountYet">Alreay a member? Login</string>
    <string name="waitLogin">Logging in</string>
    <string name="waitRegister">Creating account</string>
    <string name="accountMenu">Account</string>
    <string name="profile">Perfil</string>
    <string name="ingreso">Vehiculo</string>
    <string name="ingresoAdmin">Ingreso Vehiculo</string>
    <string name="purchases">Purchases</string>
    <string name="favorites">Favorites</string>
    <string name="categories">Categories</string>
    <string name="offers">Offers</string>
    <string name="session">Session</string>
    <string name="logout">Salir</string>
    <string name="register">Register</string>
    <string name="update">Update</string>
    <string name="searchEmployee">Search Employee</string>
    <string name="selectEmpployee">Select</string>
    <string name="idCard">Identification Card</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="birthDay">Birthday</string>
    <string name="gender">Gender</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="address">Address</string>
    <string name="registerEmployee">Register Employee</string>
    <string name="readInsurer">See insurers</string>
    <string name="updateInsurer">Update Insurers</string>
    <string name="registerInsurer">Register Insurer</string>
    <string name="readEmployee">See employees</string>
    <string name="updateEmployee">Update employee</string>
    <string name="readService">See service</string>
    <string name="updateService">Update service</string>
    <string name="nameInsurer">Name Insurer</string>
    <string name="telInsurer">Tel Insurer</string>
    <string name="car_select">Direccion</string>
    <string name="nameService">Name service </string>
    <string name="idService"> Descripcion</string>
    <string name="price_service"> Price </string>
    <string name="service_time"> Promedy Time </string>
    <string name="hi">Hi</string>
    <string name="errConnect">You do not have an internet connection</string>
    <string name="errLogin">User or password invalid</string>
    <string name="errServer">We are not online</string>
    <string name="userRegistrationOk">Successful registration</string>
    <string name="emailRegistered">Upss, Mail is already in use</string>
    <string name="idCardRegistered">Upss, Id Card is already in use</string>
    <string name="errRegistry">Upss, The registration could not be made</string>
    <string name="personalData">Personal Data</string>
    <string name="writeName">Write your name</string>
    <string name="writeEmail">Write your email</string>
    <string name="writePhone">Write your phone</string>
    <string name="writeID">Write your identification card</string>
    <string name="cancelButton">Cancel</string>
    <string name="saveButton">Save</string>
    <string name="favNotification">It is now one of your favorite products</string>
    <string name="favNotificationDelete">It has been removed from your favorites</string>
    <string name="banner">banner</string>
    <string name="cartTitle">Vehicle</string>
    <string name="order">Order</string>
    <string name="shipment">Shipment</string>
    <string name="payment">Payment</string>
    <string name="facebook_app_id">237743414061472</string>
    <string name="fb_login_protocol_scheme">fb237743414061472</string>
    <string name="hint_placa"> Plate </string>
    <string name="car_name"> Car name </string>
    <string name="texto"> Send your answer</string>
    <string name="mecanica"> Mechanic </string>
    <string name="enviar_sugerencia">Send </string>
    <string name="hint_cargo"> Charge  </string>
    <string name="searchInsurer">Buscar aseguradora </string>
    <string name="searchService"> Buscar servicio </string>
    <string-array name="country_arrays">
        <item> Toyota </item>
        <item> Nisan</item>
        <item> BMW </item>
        <item>Ford</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_product_info">ProductInfoActivity</string>
    <string name="vodka_text">
        "Audaz, original, creativo. Absolut Vodka se lanzó en Nueva York en 1979."
        "Nuestra botella transparente y sin etiqueta, inspirada en un frasco de"
        "medicamentos del siglo XVIII, se destacó por sobre los competidores,"
        "que usaban botellas más altas y llamativas. Después de todo, era la Nueva"
        "York de los años 70. Había que ser diferente para llamar la atención."</string>
</resources>