<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">


    <item android:title="@string/accountMenu">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/account"
                    android:icon="@drawable/ic_user"
                    android:title="@string/profile" />
                <item
                    android:id="@+id/purchases"
                    android:icon="@drawable/ic_shopping_bag"
                    android:title="@string/purchases" />
                <item
                    android:id="@+id/favorites"
                    android:icon="@drawable/ic_heart"
                    android:title="@string/favorites" />
            </group>

        </menu>
    </item>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/categories"
            android:icon="@drawable/ic_products"
            android:title="@string/categories" />
        <item
            android:id="@+id/offers"
            android:icon="@drawable/ic_discount"
            android:title="@string/offers" />

    </group>

    <item android:title="@string/session">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/logout"
                    android:icon="@drawable/ic_logout"
                    android:title="@string/logout" />
            </group>
        </menu>
    </item>

</menu>
