<?xml version="1.0" encoding="utf-8"?>


<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context=".Activities.Employee">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="MODULO EMPLEADO"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:layout_marginTop="50dp"
        android:textStyle="bold"
        android:textSize="30dp">

    </TextView>

    <Button
        android:id="@+id/btn_reg_employee"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/primaryColor"
        android:layout_marginTop="100dp"
        android:layout_marginHorizontal="20dp"
        android:text="@string/registerEmployee"
        app:icon="@drawable/ic_rss_button"
        style="@style/Widget.MaterialComponents.Button.Icon"
        />

    <Button
        android:id="@+id/listar_empleados_buttom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/readEmployee"
        android:layout_marginTop="60dp"
        android:layout_marginHorizontal="20dp"
        app:icon="@drawable/ic_interface"
        style="@style/Widget.MaterialComponents.Button.Icon"/>

    <Button
        android:id="@+id/actualizar_empleado_buttom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginHorizontal="20dp"
        android:text="@string/updateEmployee"
        app:icon="@drawable/ic_direction_arrow"
        style="@style/Widget.MaterialComponents.Button.Icon"/>

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_marginLeft="45dp"
            android:layout_width="300dp"
            android:layout_height="150dp"
            android:layout_marginTop="50dp"
            android:textAlignment="center"
            android:src="@drawable/empleado_image"
            tools:ignore="MissingConstraints">

        </ImageView>

    </LinearLayout>

</LinearLayout>



