<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryColor"
    tools:context="com.example.lamorena.crud.updateServicio">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundColor="@color/secondaryTextColor"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="60dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_consulta_service"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/searchService"
                android:textColorHighlight="@color/black"
                android:shadowColor="@color/black"/>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_upd_select"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            style="@style/SmallComponent"
            app:cornerRadius="10dp"
            android:elevation="15dp"
            android:backgroundTint="@color/secondaryColor"
            android:textColor="@color/secondaryTextColor"
            android:layout_marginBottom="24dp"
            android:onClick="searchService"
            android:text="@string/selectEmpployee"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <LinearLayout
            android:layout_marginTop="180dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cv_one_login_employee"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:elevation="10dp"
                    app:cardBackgroundColor="#fcfcfc"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="10dp"
                    app:cardPreventCornerOverlap="false"
                    app:cardUseCompatPadding="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="30dp"
                        android:layout_marginBottom="30dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:orientation="vertical">
                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            app:boxBackgroundColor="@color/secondaryTextColor"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="5dp"
                            android:layout_marginTop="8dp">
                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/input_update_service_name"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="number"
                                android:hint="@string/nameService" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            app:boxBackgroundColor="@color/secondaryTextColor"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="5dp"
                            android:layout_marginTop="8dp">
                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/input_update_service_price"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="number"
                                android:hint="@string/price_service" />
                        </com.google.android.material.textfield.TextInputLayout>
                        <!--  Email Label -->
                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            app:boxBackgroundColor="@color/secondaryTextColor"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="5dp"
                            android:layout_marginTop="8dp">
                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/input_update_service_time"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="text"
                                android:hint="@string/service_time" />
                        </com.google.android.material.textfield.TextInputLayout>
                        <!--  Email Label -->
                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            app:boxBackgroundColor="@color/secondaryTextColor"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="5dp"
                            android:layout_marginTop="8dp">
                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/input_update_service_placa"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="text"
                                android:hint="@string/idService" />
                        </com.google.android.material.textfield.TextInputLayout>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </RelativeLayout>

        </LinearLayout>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login2"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_below="@id/cv_one_login"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            style="@style/SmallComponent"
            app:cornerRadius="10dp"
            android:elevation="15dp"
            android:backgroundTint="@color/secondaryColor"
            android:textColor="@color/secondaryTextColor"
            android:layout_marginBottom="24dp"
            android:onClick="createService"
            android:text="@string/register"/>
            <!--android:onClick="createEmployee"-->



    </LinearLayout>

</RelativeLayout>