<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
    android:background="@color/primaryColor"
    android:theme="@style/AppTheme.NoActionBar"
    android:gravity="center"
    android:id="@+id/context_view"
tools:context="com.example.lamorena.Activities.Login">

<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="56dp"
    android:paddingLeft="24dp"
    android:paddingRight="24dp">


    <LinearLayout
        android:layout_marginTop="-50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.cardview.widget.CardView
                android:id="@+id/cv_one_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:elevation="10dp"
                app:cardBackgroundColor="#fcfcfc"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp"
                app:cardPreventCornerOverlap="false"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="30dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:orientation="vertical">


                    <!--  Email Label -->
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:boxBackgroundColor="@color/secondaryTextColor"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_marginTop="8dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginBottom="8dp">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/input_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textEmailAddress"
                            android:hint="@string/email" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <!--  Password Label -->
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:boxBackgroundColor="@color/secondaryTextColor"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_marginTop="8dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginBottom="8dp"
                        app:endIconMode="password_toggle">
                        <EditText android:id="@+id/input_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword"
                            android:hint="@string/password"/>
                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>


            </androidx.cardview.widget.CardView>


        </RelativeLayout>
    </LinearLayout>








    <Button
        android:id="@+id/btn_login"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_below="@id/cv_one_login"
        android:layout_centerHorizontal="true"
        style="@style/SmallComponent"
        app:cornerRadius="10dp"
        android:layout_gravity="center"
        android:layout_marginTop="-35dp"
        android:elevation="15dp"
        android:backgroundTint="@color/secondaryColor"
        android:textColor="@color/secondaryTextColor"
        android:layout_marginBottom="24dp"
        android:onClick="login"
        android:text="@string/login"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.facebook.login.widget.LoginButton
            android:id="@+id/buttonFacebookLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"/>
    </LinearLayout>



    <TextView android:id="@+id/link_signup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/secondaryTextColor"
        android:layout_marginBottom="24dp"
        android:text="@string/noAccountYet"
        android:onClick="goToRegister"
        android:gravity="center"
        android:textSize="16dip"/>




</LinearLayout>
</RelativeLayout>